# Yi

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  REASONIX.md  index.html  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
src-tauri/src/db/: import_export.rs  mod.rs  projects.rs  records.rs  sessions.rs  settings.rs
src/components/: DayDetailModal.tsx  DayEditor.tsx  ErrorBoundary.tsx  IconButton.tsx  ResultsCalendar.tsx  SearchResults.tsx  SortableArchiveItem.tsx  SortableItemBase.tsx  SortableProjectItem.tsx  StatsBar.tsx  StatsCalendar.tsx  StatsSummary.tsx  TitleBar.tsx  Toast.tsx  Toggle.tsx  ViewModeToggle.tsx
src/hooks/: useAutoSave.ts  useAutoUpdate.ts  useBrowserRestrictions.ts  useDragReorder.ts  useErrorToast.ts  useGlobalShortcut.ts  useReorder.ts  useShortcut.ts  useSortableSensors.ts
src/i18n/locales/: en.json  zh.json
src/ipc/: index.ts
src/pages/: Archive.tsx  Home.tsx  Results.tsx  Settings.tsx  Statistics.tsx
src/store/: projects.ts  settings.ts  timer.ts
src/styles/: components.css  global.css
src/types/: index.ts
src/utils/: format.ts
tests/e2e/: archive.spec.ts  import-export.spec.ts  project-timer.spec.ts  settings.spec.ts
